Fixed spacing on Middle Content section.

--- a/index.css
+++ b/index.css
@@ -39,6 +39,10 @@ body{
     padding: 10px;
 }
 
+header{
+    background-image: linear-gradient(to bottom right, #f0f0f0, #f0f0f0, grey);
+}
+
 .headerbar{
     display: flex;
 }
@@ -67,36 +71,69 @@ header h2{
 
 }
 
+.headerbar nav h2{
+    font-size: 5.5vh;
+    margin-right: 4vh;
+}
+
 #PotluckPic{
     object-fit: cover;
     width: 100%;
-    height: 50vh;
+    height: 65vh;
+    border-bottom: 20px solid black;
 }
 
 
 .getstarted{
     display: flex;
+    flex-direction: column;    
     width: 90%;
-    margin: 2%;
-
+    margin: auto;
+    margin-top: -23vh;
 }
 .getstarted div{
-    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5%;
+    padding-top: 2%;
     font-size: 2em;
+    color:whitesmoke;
     text-align: center;
-    background-color: rgb(121, 224, 219);
-
+    justify-content: center;
+    background-color: rgba(61, 61, 61, 0.856);
 }
 
-.getstarted div a{
-    border-style: solid;
-    border-color: black;
-    border-radius: 10%;
-    background-color: crimson;
-    padding: 2%;
+.getstarted .starttitle h2{
+    font-size: 3em;
+    color: rgb(255, 196, 1);
+}
+
+.getstarted .startdescription{
+    font-size: 2rem;
+    align-self: center;
+    padding-left: 10vh;
+    padding-right: 10vh;
+}
+
+.getstarted a{
+    font-size: 1em;
+    border-radius: 20px;
+    background-color: rgb(255, 196, 1);
+    padding: 1%;
     text-decoration: none;
-    color: whitesmoke;
+    color: black;
     margin: 1vh;
+    transition: ease .2s;
+    width: 50%;
+    align-self: center;
+    margin-bottom: 4vh;
+}
+
+.getstarted a:hover{
+    color:  rgb(255, 196, 1);
+    background-color: rgb(70, 70, 70);
+    border: 2px solid rgb(255, 196, 1); 
+    transform: scale(1.125);
 }
 
 /*CONTAINER STYLES*/
@@ -107,27 +144,34 @@ h3{
 
 .middle-content{
     display: flex;
-
-    width: 90%;
-
+    flex-direction: column;
+    margin: 8vh;
 }
 
-.content-row{
-    /* display:flex; */
+.content-row1, .content-row2{
+    display:flex;
     align-items: center; 
     text-align: center; 
-    width: 90%; 
 }
 
-.content-row div img{
-    width: 50%; 
+
+.middle-content div img{
+    width: 70vh; 
     height: auto;
+    padding: 5vh;
 }
 
 /*FOOTER STYLES*/
 
+footer{
+    background-image: linear-gradient(to top left, #f0f0f0, #f0f0f0, grey);
+}
+
 .footerbar{
     display: flex;
+    flex-direction: row-reverse;
+    border-top: 4px solid black; 
+    margin-top: 4vh;
 }
 
 .footerbar nav{
